fixing about section overlaped form section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,5 @@
 .about-container {
-    background-color: #111;
-    height: 100vh;
+    background-color: #d4b819;
 }
 
 .about-container b {
