--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,3 @@
-/* .bis_skin_checked{
-    height: 100%;
-} */
-
 .card-bis_skin_checked .card-body {
     border: 1px solid #54267D;
 }
