--- a/src/components/Guides/Guides.css
+++ b/src/components/Guides/Guides.css
@@ -14,5 +14,5 @@
     background-position: bottom right;
 }
 .Guide-container {
-    background-color: #13e930;
+    background-color: #111111;
 }
